--- a/index.html
+++ b/index.html
@@ -7,12 +7,20 @@
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
+
 <body>
     <!-- Navigation -->
     <header>
         <nav class="navbar">
             <h1 class="logo">Lee Wei Xuan</h1>
             <ul class="nav-links">
+                <li>
+                    <div class="lang-switcher">
+                    <button onclick="setLanguage('en')">EN</button>
+                    <button onclick="setLanguage('zh')">中文</button>
+                    <button onclick="setLanguage('jp')">日本語</button>
+                    </div>
+                </li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -22,15 +30,15 @@
 
     <!-- Hero Section -->
     <section class="hero">
-        <h2>Hello, This is <span>Lee Wei Xuan</span></h2>
-        <p>I create games, interactive experiences, and websites.</p>
-        <a href="#projects" class="btn">View My Work</a>
+        <h2 data-key="hero_title">Hello, This is <span>Lee Wei Xuan</span></h2>
+        <p data-key="hero_desc">I create games, interactive experiences, and websites.</p>
+        <a href="#projects" class="btn" data-key="view_work">View My Work</a>
     </section>
 
     <!-- About Section -->
     <section id="about" class="section reveal">
-        <h2 id="HoverEffect">About Me</h2>
-        <p>
+        <h2 id="HoverEffect" data-key="about_title">About Me</h2>
+        <p data-key="about_desc">
             I am a developer who loves creating unique and engaging experiences.
             I specialize in Unity, game design, and web development.
         </p>
@@ -39,24 +47,23 @@
     <!-- Projects Section -->
     <section id="projects" class="section reveal">
 		
-        <h2>Projects</h2>
-
+        <h2 data-key="projects_title">Projects</h2>
         <div class="project-grid">
             <div class="project-card">
-                <h3>Project One</h3>
-                <p>A brief description of this project.</p>
+                <h3 data-key="project1_title">Project One</h3>
+                <p data-key="project1_desc">A brief description of this project.</p>
             </div>
 
             <div class="project-card">
-                <h3>Project Two</h3>
-                <p>A brief description of this project.</p>
+                <h3 data-key="project2_title">Project Two</h3>
+                <p data-key="project2_desc">A brief description of this project.</p>
             </div>	
         </div>
     </section>
 
     <!-- Contact Section -->
     <section id="contact" class="section reveal">
-        <h2>Contact</h2>
+        <h2 data-key="contact_title">Contact</h2>
 		<p>Email: leeweixuan9@gmail.com</p>
 		<br>
 		<p>Numbers: +60 17-837 4593</p>
@@ -110,6 +117,64 @@ window.addEventListener("scroll", () => {
         }
     });
 });
+
+const translations = {
+    en: {
+        hero_title: "Hello, This is <span>Joking</span>",
+        hero_desc: "I create games, interactive experiences, and websites.",
+        view_work: "View My Work",
+        about_title: "About Me",
+        about_desc: "I am a developer who loves creating unique and engaging experiences. I specialize in Unity, game design, and web development.",
+        projects_title: "Projects",
+        project1_title: "Project One",
+        project1_desc: "A brief description of this project.",
+        project2_title: "Project Two",
+        project2_desc: "A brief description of this project.",
+        contact_title: "Contact"
+    },
+
+    zh: {
+        hero_title: "你好，我是 <span>李伟轩</span>",
+        hero_desc: "我制作游戏、互动体验与网站。",
+        view_work: "查看我的作品",
+        about_title: "关于我",
+        about_desc: "我是一名热爱创造独特且有趣体验的开发者，专注于 Unity、游戏设计与网页开发。",
+        projects_title: "项目",
+        project1_title: "项目一",
+        project1_desc: "这是该项目的简要说明。",
+        project2_title: "项目二",
+        project2_desc: "这是该项目的简要说明。",
+        contact_title: "联系我"
+    },
+
+    jp: {
+        hero_title: "こんにちは、<span>Lee Wei Xuan</span> です",
+        hero_desc: "ゲーム、インタラクティブ体験、ウェブサイトを制作しています。",
+        view_work: "作品を見る",
+        about_title: "自己紹介",
+        about_desc: "私はユニークで魅力的な体験を作ることが好きな開発者です。Unity、ゲームデザイン、Web開発を専門としています。",
+        projects_title: "プロジェクト",
+        project1_title: "プロジェクト1",
+        project1_desc: "このプロジェクトの簡単な説明。",
+        project2_title: "プロジェクト2",
+        project2_desc: "このプロジェクトの簡単な説明。",
+        contact_title: "連絡先"
+    }
+};
+
+function setLanguage(lang) {
+    document.querySelectorAll("[data-key]").forEach(el => {
+        const key = el.getAttribute("data-key");
+        el.innerHTML = translations[lang][key];
+    });
+
+    localStorage.setItem("language", lang);
+}
+
+// Load saved language
+const savedLang = localStorage.getItem("language") || "en";
+setLanguage(savedLang);
+
 </script>
 
 	
