--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 	<img id="leftwheel" src="wheel.png" alt="Wheel">
 	<img id="rightwheel" src="wheel.png" alt="Wheel">
 
-    <div id="projectOverlay" class="project-overlay">
-    <h2 id="overlayTitle">Project Title</h2>
+    <!-- <div id="projectOverlay" class="project-overlay">-->
+    <!-- <h2 id="overlayTitle">Project Title</h2>-->
 
     <div class="overlay-content">
         <img id="overlayImage" src="" alt="">
