Resume English and Japanese Version

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <p>© 2025 LeeWeiXuan. All rights reserved.</p>
     </footer>
 	
-	<!-- <img id="leftwheel" src="wheel.png" alt="Wheel">-->
-	<!-- <img id="rightwheel" src="wheel.png" alt="Wheel">-->
+	<img id="leftwheel" src="wheel.png" alt="Wheel">
+	<img id="rightwheel" src="wheel.png" alt="Wheel">
 
     <div id="projectOverlay" class="project-overlay">
     <h2 id="overlayTitle">Project Title</h2>
@@ -138,7 +138,7 @@ window.addEventListener("scroll", () => {
 
 const translations = {
     en: {
-        hero_title: "Hello, This is <span>Joking</span>",
+        hero_title: "Hello, This is <span>Lee Wei Xuan</span>",
         hero_desc: "I create games, interactive experiences, and websites.",
         view_work: "View My Work",
         about_title: "About Me",
