--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     </div>
 </div>
 
+<!--<a href="Resume_LeeWeiXuan_2025.pdf" target="_blank" rel="noopener noreferrer">View or Download PDF Document</a>-->
+
 
 <script>
 const wheel = document.getElementById("leftwheel");
