--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="nav-links">
           <div class="lang-switcher">
             <button class="mainBtn" id="mainBtn" data-key="info">Info</button>
-            <button>
+            <button class="language">
               <img
                 id="languageIcon"
                 class="languageIcon"
