--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
         <ul class="nav-links">
           <div class="lang-switcher">
             <button class="mainBtn" id="mainBtn" data-key="info">Info</button>
-            <button class="language">
-              <img
-                id="languageIcon"
-                class="languageIcon"
-                src="Images/languageIcon.png"
-              />
-            </button>
+            <button class="languageIcon"><img id="languageIcon" src="Images/languageIcon.png"></button>
           </div>
         </ul>
       </nav>
